- Menus show previous menus when selecting submenus
- When selecting ZX Vision Style, it is applied on moving cursor
- Improve cursor movement on menus when pressing PgDn/PgUp
- Warn on the resize mark when a window has to be enlarged (because there is text beyond current size)
- Process switcher is located at bottom-left part of the display by default

* Fixes:

Remove buffer full indicator when pressing shift+e on External Audio Source window
Fixed TZX autload as Real Tape on Spectrum +3
Fixed hotswap ZX80 to ZX81, ZX81 to ZX80
Fixed Amstrad CPC Scroll
Fixed loading .nex snapshots and Layer 2 not being initialized (fixes errors on Head Over Heels for Next, for example)
Fixed Search menu feature
Fixed bug saving .ZSF Z88 snapshot when RAM or Memory Card block is not compressed
Fixed showing footer message F5/Button menu

* Misc Changes:

...

* As always, there are some other minor bugfixes and improvements

----


ZEsarUX 11.0 - David edition. 06 June 2024

This version is dedicated to my brother David. Rest in peace.

* New things added:

Added loading audio from external audio source, like a tape player. This also includes:
- External Audio Source Window: you may see the audio wave, the signal type, and an azimuth assistant which tells you when you have to use the screwdriver ;)
- Spectrum Analyzer (Audio Spectrum I mean): you may see full frequency range of the audio wave

Added ZENG Online feature, which allows you to play to any emulated game on a multiplayer way using a central server
Added ZENG support on all emulated machines
Added ZENG support on curses driver
Added save screen to .txt file
Added save screen to .stl file, useful to print on 3D Printer
Added support for ZX81 .P81 files
Added save support for ZX80 & ZX81 .Z81 snapshots
Added function to shift bits on Hex Editor
Added new compiled version: Haiku OS
Added TempleOS GUI Style
Added QNX GUI Style
Added setting to force CHR$ 128 mode on ZX81
Added search function to locate menu entries