@@ -359,3 +359,7 @@ aunque no todos. por ejemplo en +3dsk, visor format disc, pulsar en archivo-> bl
 
 -con no border on full screen & no footer on full screen, al salir de full screen a veces peta
 parece que es la llamada a menu_interface_border
+
+-Para top menu
+*primero poder desactivar solo botones de arriba bajo demanda
+*top bar tiene que poder aparecer como overlay. Así se puede hacer mostrar al mover ratón, y también mientras menús están activos
