@@ -3626,7 +3626,8 @@ int util_write_configfile(void)
 
     if (screen_ext_desktop_place_menu)          ADD_STRING_CONFIG,"--zxdesktop-new-items");
 
-    if (menu_zxdesktop_buttons_enabled.v==0)    ADD_STRING_CONFIG,"--zxdesktop-disable-buttons");
+    if (menu_zxdesktop_upper_buttons_enabled.v==0)    ADD_STRING_CONFIG,"--zxdesktop-disable-upper-buttons");
+    if (menu_zxdesktop_lower_buttons_enabled.v==0)    ADD_STRING_CONFIG,"--zxdesktop-disable-lower-buttons");
 
 
     if (menu_ext_desktop_transparent_upper_icons.v)   ADD_STRING_CONFIG,"--zxdesktop-transparent-upper-buttons");
